# routes/recipes.js
@@ -19,11 +19,31 @@ router.get("/w", async (req, res, next) => {
 });
 
 
-
-
 /**
  * This path returns a full details of a recipe by its id
  */
+
+ router.get("/random", async (req, res, next) => {
+ 
+  try {
+    const recipes_info = await recipes_utils.getThreeRandomRecipes();
+    res.send(recipes_info);
+  } catch (error) {
+   next(error);
+  }
+  });
+  
+  router.get("/recipesByName", async (req, res, next) => {
+    try {
+      const recipe = await recipes_utils.getRecipeByName(req.body.recipesName,req.body.number);
+      res.send(recipe);
+    } catch (error) {
+      next(error);
+    }
+  
+  });
+  
+
 router.get("/:recipeId", async (req, res, next) => {
   try {
     const recipe = await recipes_utils.getRecipeDetails(req.params.recipeId);
@@ -31,6 +51,12 @@ router.get("/:recipeId", async (req, res, next) => {
   } catch (error) {
     next(error);
   }
+
 });
+
+
+
+
+
 
 module.exports = router;
